--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Informações do Filme</string>
-    <string name="title_home">Populares</string>
+    <string name="title_home">Em Alta</string>
     <string name="title_dashboard">Todos os Filmes</string>
     <string name="title_notifications">Favoritos</string>
 </resources>
